--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "chokidar": "^4.0.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "ws": "^8.18.1"
   },
   "name": "server",
   "version": "1.0.0",
